# Acadia

./: .gitignore  Cargo.toml
ai_function_proc_macro/: Cargo.toml
ai_function_proc_macro/src/: lib.rs
code_templates/: main.rs
code_templates/python_flask/: app.py
code_templates/rust_axum/: main.rs
generated_code/: main.rs
src/: main.rs
src/agents/: mod.rs
src/agents/architect_agent/: architect_agent.rs
src/agents/backend_agent/: backend_agent.rs  mod.rs
src/agents/base/: agent_attributes.rs  agent_traits.rs  development_workflow.rs  mod.rs
src/agents/frontend_agent/: mod.rs
src/agents/manager_agent/: manager_agent.rs  mod.rs
src/ai_functions/: ai_functions.rs  mod.rs
src/macros/: get_func_str.rs  mod.rs
src/models/general/: llm.rs  mod.rs  project.rs
src/utils/: code_generation.rs  command_line.rs  files_io.rs  helper.rs  llm_requests.rs  mod.rs
